[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesed"
version = "0.1.0"
description = "Bayesian SED modeling tool"
authors = [
    { name = "Zihao Zuo", email = "zuo@umich.edu" }
]
readme = "README.md"
license = { text = "CC-BY-NC" } # adjust if you use a different license
requires-python = ">=3.8"           # set the minimum Python version you support

# -------------------------------------------------
# Copy the packages you would otherwise put in requirements.txt 
dependencies = [
    "numpy",
    "astropy"
]

# -------------------------------------------------
# Optional: Development‑only dependencies (e.g., testing, linting)
[project.optional-dependencies]
dev = ["pytest>=7.0"]

# -------------------------------------------------
# Tell setuptools where the source lives
[tool.setuptools.packages.find]
where = ["."]       # where the main source code lives
